--- a/index.html
+++ b/index.html
@@ -1,5 +1,43 @@
 <!DOCTYPE html>
 <html>
+  <!--
+                                                           ___,-----, 
+                  _,--.---.                         __,--'         / 
+                ,' _,'_`._ \                    _,-'           ___,| 
+               ;--'       `^-.                ,'        __,---'   || 
+             ,'               \             ,'      _,-'          || 
+            /                  \         _,'     ,-'              || 
+           :                    .      ,'     _,'                 |: 
+           |                    :     `.    ,'                    |: 
+           |           _,-      |       `-,'                      :: 
+          ,'____ ,  ,-'  `.   , |,         `.                     : \ 
+          ,'    `-,'       ) / \/ \          \                     : : 
+          |      _\   o _,-'    '-.           `.                    \ \ 
+           `o_,-'  `-,-' ____   ,` )-.______,'  `.                   : : 
+            \-\    _,---'    `-. -'.\  `.  /     `.                  \  \ 
+             / `--'             `.   \   \:        \                  \,.\ 
+            (              ____,  \  |    \\        \                 :\ \\ 
+             )         _,-'    `   | |    | \        \                 \\_\\ 
+            /      _,-'            | |   ,'-`._      _\                 \,' 
+            `-----' |`-.           ;/   (__ ,' `-. _;-'`\           _,--' 
+          ,'        |   `._     _,' \-._/  Y    ,-'      \      _,-' 
+         /        _ |      `---'    :,-|   |    `     _,-'\_,--'   \ 
+        :          `|       \`-._   /  |   '     `.,-' `._`         \ 
+        |           _\_    _,\/ _,-'|                     `-._       \ 
+        :   ,-         `.-'_,--'    \                         `       \ 
+        | ,'           ,--'      _,--\           _,                    : 
+         )         .    \___,---'   ) `-.____,--'                      | 
+        _\    .     `    ||        :            \                      ; 
+      ,'  \    `.    )--' ;        |             `-.                  / 
+     |     \     ;--^._,-'         |                `-._            _/_\ 
+     \    ,'`---'                  |                    `--._____,-'_'  \ 
+      \_,'                         `._                          _,-'     - 
+                                 ,-'  `---.___           __,---'          '
+                               ,'             `---------'                  ' 
+                             ,'                                            `
+    ___   ___         ___                        __                         
+
+ -->
   <head>
     <meta charset="UTF-8" />
     <title>Meu Portfólio</title>
@@ -18,8 +56,10 @@
       <nav>
         <ul id="navbar-list">
           <li><a href="https://github.com/Maykonvk">Sobre</a></li>
-          <li><a href="#">Projetos</a></li>
-          <li><a href="#">Contato</a></li>
+          <li>
+            <a href="https://github.com/Maykonvk?tab=repositories">Projetos</a>
+          </li>
+          <li><a href="https://wa.me/qr/3BKDPDY4KYCEH1">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -41,8 +81,8 @@
           Sou estudante de programação atualmente no segundo período de analise
           e desenvolvimento de sistemas no centro universitário Maurício de
           Nassau, atualmente estou estudando sobre Python, Html, Css e
-          JavaScript, estou criando esse site com fins acadêmicos apenas para
-          por em prática o que estou aprendendo sobre Html e Css.
+          JavaScript. Estou criando esse site com fins acadêmicos para por em
+          prática o que estou aprendendo sobre Html e Css.
         </p>
       </section>
       <!-- about fim -->
@@ -79,7 +119,7 @@
             performático.
           </p>
           <p class="subtitle">Serviços de Cloud:</p>
-          <p>AWS, Google Cloud, Mircosoft Azure.</p>
+          <p>AWS, Google Cloud, Microsoft Azure.</p>
           <p class="subtitle">O que posso fazer:</p>
           <p>Clusters, servidores de CDN, diminuir o tempo de requisição.</p>
         </div>
