Erros de português foram corrigidos

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p>
           Sou estudante de programação atualmente no segundo período de analise
           e desenvolvimento de sistemas no centro universitário Maurício de
-          Nassau, atualmente estou estudando sobre Python, Html, Css e
+          Nassau, momentâneamente estou estudando sobre Python, Html, Css e
           JavaScript. Estou criando esse site com fins acadêmicos para por em
           prática o que estou aprendendo sobre Html e Css.
         </p>
@@ -93,7 +93,7 @@
         <div class="skills-container">
           <img src="img/weapon1.png" alt="Weapons" />
           <h3>Desenvolvimento</h3>
-          <p>Tenho habilidades com desenvolvimento de projetos web</p>
+          <p>Habilidades com desenvolvimento de projetos web</p>
           <p class="subtitle">Linguagens que utilizo:</p>
           <p>HTML,CSS,JS e Python</p>
           <p class="subtitle">Projetos que posso desenvolver:</p>
@@ -104,11 +104,11 @@
         <div class="skills-container">
           <img src="img/weapon2.png" alt="Weapons" />
           <h3>Criação</h3>
-          <p>Atuo também na análise e gerenciamento de projetos</p>
-          <p class="subtitle">Meus conhecimentos:</p>
+          <p>Análise e gerenciamento de projetos</p>
+          <p class="subtitle">Conhecimentos:</p>
           <p>
-            Análise de software, engenharia de requisitos, scrum e metodologia
-            agil.
+            Análise de software, Engenharia de requisitos, Scrum e Metodologia
+            ágil.
           </p>
         </div>
         <div class="skills-container">
