--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
       <h2>Maykon Kelm</h2>
       <nav>
         <ul id="navbar-list">
-          <li><a href="https://github.com/Maykonvk">Sobre</a></li>
+          <li><a href="https://www.instagram.com/maykon.kelm07/">Sobre</a></li>
           <li>
-            <a href="https://github.com/Maykonvk?tab=repositories">Projetos</a>
+            <a href="https://github.com/Maykon-Kelm">Projetos</a>
           </li>
           <li><a href="https://wa.me/qr/3BKDPDY4KYCEH1">Contato</a></li>
         </ul>
@@ -79,11 +79,10 @@
       <section id="about-section">
         <h2>Sobre mim</h2>
         <p>
-          Sou estudante de programação atualmente no segundo período de analise
-          e desenvolvimento de sistemas no centro universitário Maurício de
-          Nassau, momentâneamente estou estudando sobre Python, Html, Css e
-          JavaScript. Estou criando esse site com fins acadêmicos para por em
-          prática o que estou aprendendo sobre Html e Css.
+          Sou estudante de programação atualmente no terceiro período de analise
+          e desenvolvimento de sistemas na UNIBRA, trabalho com PLSQL e utilizo o BD ORACLE na MV Sistemas,
+          momentâneamente estou estudando sobre JAVA com a intenção de me especializar na área. 
+          Estou criando esse site com fins acadêmicos e para servir de Portfólio.
         </p>
       </section>
       <!-- about fim -->
@@ -94,12 +93,14 @@
         <div class="skills-container">
           <img src="img/weapon1.png" alt="Weapons" />
           <h3>Desenvolvimento</h3>
-          <p>Habilidades com desenvolvimento de projetos web</p>
+          <p>Habilidades com BACK-END</p>
           <p class="subtitle">Linguagens que utilizo:</p>
-          <p>HTML,CSS,JS e Python</p>
+          <p>JAVA, PLSQL, HTML,CSS,JS</p>
           <p class="subtitle">Projetos que posso desenvolver:</p>
           <p>
-            Reprodutores de aúdio e vídeo em python, designs no figma e paginas
+            Qualquer coisa relacionada a Banco de Dados, 
+            <br>recentemente prestei alguns serviços 
+            para o Hospital Santa Joana de São Paulo.
           </p>
         </div>
         <div class="skills-container">
@@ -129,7 +130,7 @@
     <!-- skills fim -->
     <!-- jobs inicio -->
     <section id="jobs-section">
-      <h2>Veja meus últimos trabalhos:</h2>
+      <h2>Veja alguns dos meus trabalhos:</h2>
       <p>
         Aqui estão os meus trabalhos mais recentes, para ver todos
         <a href="#">Clique aqui</a>
@@ -140,9 +141,9 @@
         <div class="job-box proj3"></div>
       </div>
       <div class="job-container">
-        <div class="job-box proj2"></div>
-        <div class="job-box proj3"></div>
-        <div class="job-box proj1"></div>
+        <div class="job-box proj4"></div>
+        <div class="job-box proj5"></div>
+        <div class="job-box proj6"></div>
       </div>
     </section>
     <!-- jobs fim -->
@@ -154,7 +155,7 @@
         mensagem.
       </p>
       <img src="img/maykon.jpeg" alt="Perfil Ninja" />
-      <form action="" method="">
+      <form action="enviar_email.php" method="post">
         <input type="text" name="name" placeholder="Seu nome" />
         <input type="email" name="email" placeholder="Seu e-mail" />
         <textarea name="msg" placeholder="Digite uma mensagem"> </textarea>
