--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="//code.jivosite.com/widget/lHznhYwsN7" async></script>
+    <script src="//code.jivosite.com/widget/uShH73Muoq" async></script>
   </head>
   <body>
     <!-- navbar -->
